# story-flow

./: .env.example  .gitignore  Makefile  README.md  check-status.sh  start-dev.sh  test-api.sh
backend/: .env.example  Dockerfile  docker-compose.prod.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_api.py  test_full_api.py
backend/app/: __init__.py  config.py  main.py
backend/app/ai_gateway/: __init__.py  router.py  smart_router.py
backend/app/api/: deps.py
backend/app/core/: cache.py  cache_manager.py  database.py  exceptions.py  rate_limiter.py  redis.py  security.py  storage.py
backend/app/middleware/: __init__.py  auth.py  logging.py  rate_limit.py
backend/app/models/: __init__.py  asset.py  base.py  collaboration.py  project.py  scene.py  subscription.py  task.py  user.py  visual_element.py
backend/app/schemas/: __init__.py  asset.py  base.py  project.py  scene.py  task.py  user.py
backend/app/services/: __init__.py  asset_service.py  audio_service.py  auth_service.py  consistent_generator.py  controlnet_service.py  element_extractor.py  element_service.py  file_service.py  inpainting_service.py  payment_service.py  project_service.py  prompt_fusion.py  quality_enhancer.py  quota_service.py  storyboard_service.py  subscription_service.py  task_service.py  video_composer.py
backend/app/workers/: __init__.py  base.py  celery_app.py  compose.py  image.py  storyboard.py  video.py
backend/migrations/: env.py  script.py.mako
backend/tests/: __init__.py  conftest.py  test_api.py  test_health.py
backend/tests/unit/: test_security.py  (+2 more)
(+154 files in other folders)
